Added extra files to ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+BLUEPRINTS_BACKUP_CHUNK16_blueprints.zip
 CRMANIFEST.MF
 CrashAndBugReport.jar
 MANIFEST.MF
@@ -5,16 +6,24 @@ StarMade-dedicated-server-linux.sh
 StarMade-dedicated-server-macosx.command
 StarMade-dedicated-server-windows.bat
 StarMade.jar
+admins.txt
+blacklist.txt
+blockBehaviorConfigMergeResult.xml
 blueprints-default/
 blueprints-stations/
 blueprints/
 customBlockTextures/
 data/
+debugPlayerLock.lock
 language/
 lib/
 logs/
+lpversion
 native/
+protected.txt
 sector-bulk-export-import-example.txt
 server-database/
+server-message.txt
 third-party/
 version.txt
+whitelist.txt
