fixing ip bind so it points to quickfiresm.com

--- a/server.cfg
+++ b/server.cfg
@@ -32,7 +32,7 @@ THRUST_SPEED_LIMIT = 50 //How fast ships, etc. may go in m/s . Too high values m
 MAX_CLIENTS = 40 //Max number of clients allowed on this server
 SUPER_ADMIN_PASSWORD_USE = false //Enable super admin for this server
 SUPER_ADMIN_PASSWORD = mypassword //Super admin password for this server
-SERVER_LISTEN_IP = 158.69.122.144 //Enter specific ip for the server to listen to. use "all" to listen on every ip
+SERVER_LISTEN_IP = quickfiresm.com //Enter specific ip for the server to listen to. use "all" to listen on every ip
 SOCKET_BUFFER_SIZE = 65536 //buffer size of incoming and outgoing data per socket
 PHYSICS_LINEAR_DAMPING = 0.09 //how much object slow down naturally (must be between 0 and 1): 0 is no slowdown
 PHYSICS_ROTATIONAL_DAMPING = 0.09 //how much object slow down naturally (must be between 0 and 1): 0 is no slowdown
@@ -41,7 +41,7 @@ AI_DESTRUCTION_LOOT_STACK_MULTIPLIER = 0.9 //multiply amount of items spawned af
 CHEST_LOOT_COUNT_MULTIPLIER = 0.9 //multiply amount of items in a loot stack. use values smaller 1 for less and 0 for none
 CHEST_LOOT_STACK_MULTIPLIER = 0.9 //multiply amount of items spawned in chests of generated chests. use values smaller 1 for less and 0 for none
 USE_WHITELIST = false //only names/ips from whitelist.txt are allowed
-FILTER_CONNECTION_MESSAGES = false //don't display join/disconnect messages
+FILTER_CONNECTION_MESSAGES = false // don't display join/disconnect messages
 USE_UDP = false //Use 'User Datagram Protocol' (UDP) instead of 'Transmission Control Protocol' (TCP) for connections
 AUTO_KICK_MODIFIED_BLUEPRINT_USE = false //Kick players that spawn modified blueprints
 AUTO_BAN_ID_MODIFIED_BLUEPRINT_USE = false //Ban player by name that spawn modified blueprints
