changing announce ip to be the domain

--- a/server.cfg
+++ b/server.cfg
@@ -31,7 +31,7 @@ PHYSICS_SLOWDOWN_THRESHOLD = 40 //Milliseconds a collision test may take before 
 THRUST_SPEED_LIMIT = 50 //How fast ships, etc. may go in m/s . Too high values may induce physics tunneling effects
 MAX_CLIENTS = 40 //Max number of clients allowed on this server
 SUPER_ADMIN_PASSWORD_USE = false //Enable super admin for this server
-SUPER_ADMIN_PASSWORD = mypassword //Super admin password for this server
+SUPER_ADMIN_PASSWORD = HelloThereSneakyPerson //Super admin password for this server
 SERVER_LISTEN_IP = quickfiresm.com //Enter specific ip for the server to listen to. use "all" to listen on every ip
 SOCKET_BUFFER_SIZE = 65536 //buffer size of incoming and outgoing data per socket
 PHYSICS_LINEAR_DAMPING = 0.09 //how much object slow down naturally (must be between 0 and 1): 0 is no slowdown
@@ -95,7 +95,7 @@ ASTEROID_SECTOR_REPLENISH_TIME_SEC = -1 //seconds until a sector that is mined d
 NT_SPAM_PROTECT_MAX_ATTEMPTS = 30 //max attempts before refusing connections in spam protect period (default is 1/sec for 30 sec)
 NT_SPAM_PROTECT_EXCEPTIONS = 127.0.0.1 //ips excepted from spam control (separate multiple with comma) (default is localhost)
 ANNOUNCE_SERVER_TO_SERVERLIST = true //announces the server to the starmade server list so clients can find it. Hostname must be provided for HOST_NAME_TO_ANNOUNCE_TO_SERVER_LIST!
-HOST_NAME_TO_ANNOUNCE_TO_SERVER_LIST = quickfire.clanservers.com //this must be a valid hostname (either ip or host, e.g. play.star-made.org)
+HOST_NAME_TO_ANNOUNCE_TO_SERVER_LIST = QuickFireSM.com //this must be a valid hostname (either ip or host, e.g. play.star-made.org)
 SERVER_LIST_NAME = Quickfire Test Server //max length 64 characters
 SERVER_LIST_DESCRIPTION = Community run test server.  Creative Admin for all. Server settings are changed daily for testing. //max length 128 characters
 MISSILE_DEFENSE_FRIENDLY_FIRE = true //can shoot down own or missiles from own faction
