adding updated ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,17 @@ CRMANIFEST.MF
 CrashAndBugReport.jar
 MANIFEST.MF
 StarMade-dedicated-server-linux.sh
-StarMade-dedicated-server-macosx.command
-StarMade-dedicated-server-windows.bat
 StarMade.jar
 admins.txt
 blacklist.txt
-blockBehaviorConfig.xml
 blockBehaviorConfigMergeResult.xml
 blueprints-default/
 blueprints-stations/
 blueprints/
+customBlockBehaviorConfig/customBlockBehaviorConfig.xml.old
+customBlockConfig/ConfigBlockConfig.xml.old
 customBlockTextures/
+customEffectConfig/ConfigEffectConfig.xml.old
 data/
 debugPlayerLock.lock
 language/
@@ -21,10 +21,12 @@ lib/
 logs/
 lpversion
 native/
+output.log
 protected.txt
 sector-bulk-export-import-example.txt
 server-database/
 server-message.txt
+server-skins/
 third-party/
 version.txt
 whitelist.txt
