uploadeding configs 2 of 2 to updated game

--- a/server.cfg
+++ b/server.cfg
@@ -2,16 +2,16 @@ WORLD = world0 //set world to use (set 'old' for using the old world). if no wor
 PROTECT_STARTING_SECTOR = false //Protects the starting sector
 ENABLE_SIMULATION = true //Universe AI simulation
 CONCURRENT_SIMULATION = 256 //How many simulation groups may be in the universe simultaniously (performance)
-ENEMY_SPAWNING = true //Enables enemy spawing
-SECTOR_SIZE = 2000 //Sets the size of sectors in the universe **WARNING** scaling the size of an existing universe down may cause issues
+ENEMY_SPAWNING = false //Enables enemy spawing
+SECTOR_SIZE = 16000 //Sets the size of sectors in the universe **WARNING** scaling the size of an existing universe down may cause issues
 BLUEPRINT_DEFAULT_PRIVATE = true //If true, set blueprints private as default (else they are public)
 FLOATING_ITEM_LIFETIME_SECS = 240 //How much seconds items floating in space should be alive
 SIMULATION_SPAWN_DELAY = 420 //How much seconds between simulation spawn ticks
 SIMULATION_TRADING_FILLS_SHOPS = true //Trading guild will deliver stock to shops
 SECTOR_INACTIVE_TIMEOUT = 20 //Time in secs after which sectors go inactive (-1 = off)
 SECTOR_INACTIVE_CLEANUP_TIMEOUT = 10 //Time in secs after which inactive sectors are completely removed from memory (-1 = off)
-USE_STARMADE_AUTHENTICATION = false //allow star-made.org authentication
-REQUIRE_STARMADE_AUTHENTICATION = false //require star-made.org authentication (USE_STARMADE_AUTHENTICATION must be true)
+USE_STARMADE_AUTHENTICATION = true //allow star-made.org authentication
+REQUIRE_STARMADE_AUTHENTICATION = true //require star-made.org authentication (USE_STARMADE_AUTHENTICATION must be true)
 PROTECTED_NAMES_BY_ACCOUNT = 10 //How many player names a player may protect with his account (if exceeded, the player name, that was logged in the longest time ago gets unprotected)
 DEFAULT_BLUEPRINT_ENEMY_USE = true //Default option for blueprints not in catalog yet
 DEFAULT_BLUEPRINT_FACTION_BUY = true //Default option for blueprints not in catalog yet
@@ -20,7 +20,7 @@ DEFAULT_BLUEPRINT_HOME_BASE_BUY = true //Default option for blueprints not in ca
 LOCK_FACTION_SHIPS = true //If true, ships of other factions cant be edited, activated, or entered
 CATALOG_SLOTS_PER_PLAYER = -1 //How many slots per player for saved ships (-1 for unlimited)
 UNIVERSE_DAY_IN_MS = 1200000 //how long is a 'day' (stellar system rotation) in milliseconds (-1 to switch off system rotation)
-ASTEROIDS_ENABLE_DYNAMIC_PHYSICS = true //enables asteroids to be able to move in space
+ASTEROIDS_ENABLE_DYNAMIC_PHYSICS = false //enables asteroids to be able to move in space
 ENABLE_BREAK_OFF = false //debug (don't activate unless you know what you're doing)
 COLLISION_DAMAGE = false //colliding into another object does damage
 COLLISION_DAMAGE_THRESHOLD = 2.0 //Threshold of Impulse that does damage (the lower, the less force is needed for damage)
@@ -28,14 +28,14 @@ SKIN_ALLOW_UPLOAD = true //if off, skin uploading to server is deactivated
 CATALOG_NAME_COLLISION_HANDLING = false //if off, saving with an existing entry is denied, if on the name is automatically changed by adding numbers on the end
 SECTOR_AUTOSAVE_SEC = 300 //Time interval in secs the server will autosave (-1 for never)
 PHYSICS_SLOWDOWN_THRESHOLD = 40 //Milliseconds a collision test may take before anti-slowdown mode is activated
-THRUST_SPEED_LIMIT = 75 //How fast ships, etc. may go in m/s . Too high values may induce physics tunneling effects
-MAX_CLIENTS = 32 //Max number of clients allowed on this server
+THRUST_SPEED_LIMIT = 25 //How fast ships, etc. may go in m/s . Too high values may induce physics tunneling effects
+MAX_CLIENTS = 40 //Max number of clients allowed on this server
 SUPER_ADMIN_PASSWORD_USE = false //Enable super admin for this server
-SUPER_ADMIN_PASSWORD = mypassword //Super admin password for this server
+SUPER_ADMIN_PASSWORD = mypassword29! //Super admin password for this server
 SERVER_LISTEN_IP = all //Enter specific ip for the server to listen to. use "all" to listen on every ip
 SOCKET_BUFFER_SIZE = 65536 //buffer size of incoming and outgoing data per socket
-PHYSICS_LINEAR_DAMPING = 0.05 //how much object slow down naturally (must be between 0 and 1): 0 is no slowdown
-PHYSICS_ROTATIONAL_DAMPING = 0.05 //how much object slow down naturally (must be between 0 and 1): 0 is no slowdown
+PHYSICS_LINEAR_DAMPING = 0.09 //how much object slow down naturally (must be between 0 and 1): 0 is no slowdown
+PHYSICS_ROTATIONAL_DAMPING = 0.09 //how much object slow down naturally (must be between 0 and 1): 0 is no slowdown
 AI_DESTRUCTION_LOOT_COUNT_MULTIPLIER = 0.9 //multiply amount of items in a loot stack. use values smaller 1 for less and 0 for none
 AI_DESTRUCTION_LOOT_STACK_MULTIPLIER = 0.9 //multiply amount of items spawned after AI destruction. use values smaller 1 for less and 0 for none
 CHEST_LOOT_COUNT_MULTIPLIER = 0.9 //multiply amount of items in a loot stack. use values smaller 1 for less and 0 for none
@@ -47,10 +47,10 @@ AUTO_KICK_MODIFIED_BLUEPRINT_USE = false //Kick players that spawn modified blue
 AUTO_BAN_ID_MODIFIED_BLUEPRINT_USE = false //Ban player by name that spawn modified blueprints
 AUTO_BAN_IP_MODIFIED_BLUEPRINT_USE = false //Ban player by IP that spawn modified blueprints
 AUTO_BAN_TIME_IN_MINUTES = 60 //Time to ban in minutes (-1 for permanently)
-REMOVE_MODIFIED_BLUEPRINTS = false //Auto-removes a modified blueprint
+REMOVE_MODIFIED_BLUEPRINTS = true //Auto-removes a modified blueprint
 TCP_NODELAY = true //Naggles algorithm (WARNING: only change when you know what you're doing)
 PING_FLUSH = false //flushes ping/pong immediately (WARNING: only change when you know what you're doing)
-SHOP_SPAWNING_PROBABILITY = 0.1 //(must be between 0 and 1): 0 is no shops spawned in asteroid sectors, 1 is shop spawned in everyone (default: 8% -> 0.08)
+SHOP_SPAWNING_PROBABILITY = 0.08 //(must be between 0 and 1): 0 is no shops spawned in asteroid sectors, 1 is shop spawned in everyone (default: 8% -> 0.08)
 DEFAULT_SPAWN_SECTOR_X = 2 //DEFAULT Spawn Sector X Coordinate
 DEFAULT_SPAWN_SECTOR_Y = 2 //DEFAULT Spawn Sector Y Coordinate
 DEFAULT_SPAWN_SECTOR_Z = 2 //DEFAULT Spawn Sector Z Coordinate
@@ -78,7 +78,7 @@ WEAPON_RANGE_REFERENCE = 2000.0 //Reference distance for weapon ranges. (what bl
 ALLOW_UPLOAD_FROM_LOCAL_BLUEPRINTS = true //enables clients being able to upload their pre-build-blueprints to the server
 SHOP_NPC_STARTING_CREDITS = 10000000 //how much credits do shops start with
 SHOP_NPC_RECHARGE_CREDITS = 100000 //how much credits do shops gain about every 10 min
-AI_WEAPON_AIMING_ACCURACY = 200 //how accurate the AI aims (the higher the value the more accurate vs distance. 10 = about 99% accuracy at 10m)
+AI_WEAPON_AIMING_ACCURACY = 1000 //how accurate the AI aims (the higher the value the more accurate vs distance. 10 = about 99% accuracy at 10m)
 BROADCAST_SHIELD_PERCENTAGE = 5 //percent of shields changed for the server to broadcast a shield synch
 BROADCAST_POWER_PERCENTAGE = 50 //percent of power changed for the server to broadcast a power synch (not that critical)
 ADMINS_CIRCUMVENT_STRUCTURE_CONTROL = true //admins can enter ships of any faction
@@ -89,15 +89,15 @@ PLANET_SIZE_DEVIATION_VALUE = 35.0 //Planet size standard deviation. Note: norma
 ASTEROID_RADIUS_MAX = 64 //Asteroid max radius in blocks (from -x to +x)
 ASTEROID_RESOURCE_SIZE = 2.5 //Average diameter of resource veins in asteroids
 ASTEROID_RESOURCE_CHANCE = 0.003 //Chance per block to place a new resource vein (1.0 = 100%)
-PLAYER_MAX_BUILD_AREA = 10 //max area a player may add/remove in adv. build mode
+PLAYER_MAX_BUILD_AREA = 100 //max area a player may add/remove in adv. build mode
 NT_SPAM_PROTECT_TIME_MS = 30000 //period of spam protection
 ASTEROID_SECTOR_REPLENISH_TIME_SEC = -1 //seconds until a sector that is mined down to 0 asteroids is replenished (-1 = never)
 NT_SPAM_PROTECT_MAX_ATTEMPTS = 30 //max attempts before refusing connections in spam protect period (default is 1/sec for 30 sec)
 NT_SPAM_PROTECT_EXCEPTIONS = 127.0.0.1 //ips excepted from spam control (separate multiple with comma) (default is localhost)
 ANNOUNCE_SERVER_TO_SERVERLIST = false //announces the server to the starmade server list so clients can find it. Hostname must be provided for HOST_NAME_TO_ANNOUNCE_TO_SERVER_LIST!
-HOST_NAME_TO_ANNOUNCE_TO_SERVER_LIST =  //this must be a valid hostname (either ip or host, e.g. play.star-made.org)
-SERVER_LIST_NAME = NoName //max length 64 characters
-SERVER_LIST_DESCRIPTION = NoDescription //max length 128 characters
+HOST_NAME_TO_ANNOUNCE_TO_SERVER_LIST = quickfiresm.com //this must be a valid hostname (either ip or host, e.g. play.star-made.org)
+SERVER_LIST_NAME = Quickfire Test Server //max length 64 characters
+SERVER_LIST_DESCRIPTION = Community run test server.  Creative Admin for all. Server settings are changed daily for testing. //max length 128 characters
 MISSILE_DEFENSE_FRIENDLY_FIRE = true //can shoot down own or missiles from own faction
 USE_DYNAMIC_RECIPE_PRICES = true //use recipe based prices (the price is the price of the parts it is made out of in crafting)
 DYNAMIC_RECIPE_PRICE_MODIFIER = 1.05 //modifier to adjust dynamic price
@@ -179,4 +179,4 @@ ALLOW_OLD_POWER_SYSTEM = true //ALLOW_OLD_POWER_SYSTEM
 JUMP_DRIVE_ENABLED_BY_DEFAULT = true //JUMP_DRIVE_ENABLED_BY_DEFAULT
 SHORT_RANGE_SCAN_DRIVE_ENABLED_BY_DEFAULT = true //SHORT_RANGE_SCAN_DRIVE_ENABLED_BY_DEFAULT
 SPAWN_PROTECTION = 10 //SPAWN_PROTECTION
-AI_ENGAGEMENT_RANGE_OF_MIN_WEAPON_RANGE = 0.75 //AI_ENGAGEMENT_RANGE_OF_MIN_WEAPON_RANGE
+AI_ENGAGEMENT_RANGE_OF_MIN_WEAPON_RANGE = 1.0 //AI_ENGAGEMENT_RANGE_OF_MIN_WEAPON_RANGE
