--- a/server.cfg
+++ b/server.cfg
@@ -30,8 +30,8 @@ SECTOR_AUTOSAVE_SEC = 300 //Time interval in secs the server will autosave (-1 f
 PHYSICS_SLOWDOWN_THRESHOLD = 40 //Milliseconds a collision test may take before anti-slowdown mode is activated
 THRUST_SPEED_LIMIT = 85 //How fast ships, etc. may go in m/s . Too high values may induce physics tunneling effects
 MAX_CLIENTS = 40 //Max number of clients allowed on this server
-SUPER_ADMIN_PASSWORD_USE = true //Enable super admin for this server
-SUPER_ADMIN_PASSWORD = AlterintelIsAwesome! //Super admin password for this server
+SUPER_ADMIN_PASSWORD_USE = false //Enable super admin for this server
+SUPER_ADMIN_PASSWORD = mypassword31! //Super admin password for this server
 SERVER_LISTEN_IP = all //Enter specific ip for the server to listen to. use "all" to listen on every ip
 SOCKET_BUFFER_SIZE = 65536 //buffer size of incoming and outgoing data per socket
 PHYSICS_LINEAR_DAMPING = 0.09 //how much object slow down naturally (must be between 0 and 1): 0 is no slowdown
