--- a/server.cfg
+++ b/server.cfg
@@ -13,10 +13,10 @@ SECTOR_INACTIVE_CLEANUP_TIMEOUT = 10 //Time in secs after which inactive sectors
 USE_STARMADE_AUTHENTICATION = true //allow star-made.org authentication
 REQUIRE_STARMADE_AUTHENTICATION = true //require star-made.org authentication (USE_STARMADE_AUTHENTICATION must be true)
 PROTECTED_NAMES_BY_ACCOUNT = 10 //How many player names a player may protect with his account (if exceeded, the player name, that was logged in the longest time ago gets unprotected)
-DEFAULT_BLUEPRINT_ENEMY_USE = true //Default option for blueprints not in catalog yet
-DEFAULT_BLUEPRINT_FACTION_BUY = true //Default option for blueprints not in catalog yet
-DEFAULT_BLUEPRINT_OTHERS_BUY = true //Default option for blueprints not in catalog yet
-DEFAULT_BLUEPRINT_HOME_BASE_BUY = true //Default option for blueprints not in catalog yet
+DEFAULT_BLUEPRINT_ENEMY_USE = false //Default option for blueprints not in catalog yet
+DEFAULT_BLUEPRINT_FACTION_BUY = false //Default option for blueprints not in catalog yet
+DEFAULT_BLUEPRINT_OTHERS_BUY = false //Default option for blueprints not in catalog yet
+DEFAULT_BLUEPRINT_HOME_BASE_BUY = false //Default option for blueprints not in catalog yet
 LOCK_FACTION_SHIPS = true //If true, ships of other factions cant be edited, activated, or entered
 CATALOG_SLOTS_PER_PLAYER = -1 //How many slots per player for saved ships (-1 for unlimited)
 UNIVERSE_DAY_IN_MS = 1200000 //how long is a 'day' (stellar system rotation) in milliseconds (-1 to switch off system rotation)
