--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,22 @@ CRMANIFEST.MF
 CrashAndBugReport.jar
 MANIFEST.MF
 StarMade-dedicated-server-linux.sh
+StarMade-dedicated-server-macosx.command
+StarMade-dedicated-server-windows.bat
 StarMade.jar
 admins.txt
 blacklist.txt
 blockBehaviorConfigMergeResult.xml
 blueprints-default/
 blueprints-stations/
+blueprints-terrain/
 blueprints/
+chatlogs/
+customBlockBehaviorConfig/
+customBlockTextures/
+customBlockConfig/
+customEffectConfig/
+customFactionConfig/
 data/IcoVectors.bin
 data/META-INF/
 data/SkinningResources/
