Makeing Server visable to public
Setting ANNOUNCE_SERVER_TO_SERVERLIST to true

--- a/server.cfg
+++ b/server.cfg
@@ -94,7 +94,7 @@ NT_SPAM_PROTECT_TIME_MS = 30000 //period of spam protection
 ASTEROID_SECTOR_REPLENISH_TIME_SEC = -1 //seconds until a sector that is mined down to 0 asteroids is replenished (-1 = never)
 NT_SPAM_PROTECT_MAX_ATTEMPTS = 30 //max attempts before refusing connections in spam protect period (default is 1/sec for 30 sec)
 NT_SPAM_PROTECT_EXCEPTIONS = 127.0.0.1 //ips excepted from spam control (separate multiple with comma) (default is localhost)
-ANNOUNCE_SERVER_TO_SERVERLIST = false //announces the server to the starmade server list so clients can find it. Hostname must be provided for HOST_NAME_TO_ANNOUNCE_TO_SERVER_LIST!
+ANNOUNCE_SERVER_TO_SERVERLIST = true //announces the server to the starmade server list so clients can find it. Hostname must be provided for HOST_NAME_TO_ANNOUNCE_TO_SERVER_LIST!
 HOST_NAME_TO_ANNOUNCE_TO_SERVER_LIST = quickfiresm.com //this must be a valid hostname (either ip or host, e.g. play.star-made.org)
 SERVER_LIST_NAME = Quickfire Test Server //max length 64 characters
 SERVER_LIST_DESCRIPTION = Community run test server.  Creative Admin for all. Server settings are changed daily for testing. //max length 128 characters
